# requirement_list_develop

./: .dockerignore  Dockerfile  docker-compose.yml  docker_build.ps1  docker_pull.ps1  exec.ps1  exec_dev.ps1  pyproject.toml  requirements.txt  sample_settings.yaml
requirement_list/: __main__.py  abstract_prohibit_replacer.py  abstract_requirement_list.py  base_dirpath_prohibit_replacer.py  base_mantis_prohibit_replacer.py  base_redmine_prohibit_replacer.py  base_teams_prohibit_replacer.py  common_prohibit_replacer.py  config.py
requirement_list/adaptors/: default_converter_adaptor.py
requirement_list/common/: __init__.py  types.py
requirement_list/factories/: factory.py
requirement_list/requirement_converter/: default_requirement_converter.py
requirement_list_setup/: __main__.py
requirement_list_setup/template/custom/: __init__.py  dirpath_prohibit_replacer.py  mantis_prohibit_replacer.py  redmine_prohibit_replacer.py  requirement_list.py  teams_prohibit_replacer.py
requirement_list_setup/template/inifile/: config.ini
scripts/: docker_build.ps1  docker_pull.ps1  docker_push.ps1  env.ps1  exec.ps1  exec_dev.ps1
src/requirement_list/: __main__.py  config.py
src/requirement_list/adaptors/: __init__.py
src/requirement_list/interfaces/: __init__.py  abstract_converter.py  abstract_requirement_converter.py
src/requirement_list/requirement_converter/: __init__.py  base_requirement_converter.py
