[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requirement_list"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pandas",
    "openpyxl",
    "PyYAML",
    "bteam_utils @ git+https://github.com/bteam-toku/bteam_utils.git",
]

[project.scripts]
export = "requirement_list.__main__:main"
requirement_list = "requirement_list.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }
